# redesigned-goggles

./: CMakeLists.txt  README.md
assets/shaders/: albedo.glsl  composite.glsl  light.glsl
data/maps/: frontier_town.map
docs/: main-menu.md
src/: main.cpp
src/core/: Application.cpp  Application.hpp  Timer.cpp  Timer.hpp
src/game/: Map.cpp  Map.hpp  Player.cpp  Player.hpp
src/render/: IsoMath.cpp  IsoMath.hpp  Renderer.cpp  Renderer.hpp
